Added Films to Database and made FilmRepository find methods use the database. Major changes